# fastapi_simple_security

./: .gitignore  .pre-commit-config.yaml  .rtx.toml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pylintrc  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main_branch_push.yml  pr_python_tests.yml  push_linting.yml  push_sanity_check.yml  pypi-release.yml  release-please.yml
app/: main.py
fastapi_simple_security/: __init__.py  _security_secret.py  _sqlite_access.py  endpoints.py  router.py  security_api_key.py
fastapi_sqlmodel_security/: __init__.py  _models.py  _security_secret.py  api_key_security.py  data_store.py  endpoints.py
tests/: conftest.py  test_data_store.py  test_functional.py  test_security.py
