[tool.poetry]
name = "fastapi_sqlmodel_security"
version = "0.0.1"
description = "API key-based security for FastAPI using SQLModel"
authors = ["Chen Wang <dev@chenwang.org>"]
license = "MIT"
repository = "https://github.com/cwang/fastapi_sqlmodel_security"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
# 0.70 is needed to have the TestClient object
fastapi = ">=0.70"
# Necessary as older versions don't work on python 3.10
urllib3 = ">=1.26.12"
sqlmodel = "^0.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
httpx = "^0.24.1"
requests = "^2.26.0"
coverage = "^6.5.0"
black = "^22.3.0"
ruff = "^0.0.275"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.report]
omit = ["tests/conftest.py"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
